Добавил механизм жизней

--- a/less/style.less
+++ b/less/style.less
@@ -3,3 +3,5 @@
 @import "blocks/page-header.less";
 @import "blocks/page-footer.less";
 @import "blocks/profile-modal.less";
+@import "blocks/life-modal.less";
+@import "blocks/scene.less";
